<resources>
    <string name="app_name">Hazi</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="jelentkezz_be">Jelentkezz be!</string>
    <string name="email">E-mail</string>
    <string name="jelszo">Jelszo</string>
    <string name="belepes">Belepes</string>
    <string name="kedvencek">Kedvencek</string>
    <string name="etkezes">Étkezés</string>
    <string name="iszogatas">Iszogatás</string>
    <string name="kulteri">Kültéri program</string>
    <string name="belteri">Beltéri program</string>
    <string name="name">ActivityName</string>
    <string name="resztv">Adj hozzá résztvevőt!</string>
    <string name="idop">Válassz időpontot!</string>
    <string name="resztnev">Új résztvevő neve</string>
    <string name="idopont">Időpont:</string>
    <string name="hozzaad">Hozzáad</string>
    <string name="torles">Résztvevők törlése</string>
    <string name="warn_message">Sikeres művelet</string>
</resources>