<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PlusActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:paddingTop="20dp">
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/name"
        android:textSize="30sp"
        android:textColor="@color/nice"/>


    <TextView
        android:id="@+id/reszt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/resztv"
        android:textSize="30sp"
        android:textColor="@color/nice"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:text="@string/idop"
        android:textSize="30sp"
        android:textColor="@color/nice"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/resztnev"
            android:textSize="20sp"
            android:textColor="@color/nice"/>

        <EditText
            android:id="@+id/nev"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:inputType="text"/>
        <Button
            android:id="@+id/btnDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/torles"
            android:layout_margin="30dp"
            android:background="@color/nice2"
            android:textColor="@color/nice"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idopont"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:textColor="@color/nice"/>


    <DatePicker
        android:id="@+id/datepick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:headerBackground="@color/nice3"
        android:layout_gravity="center"
        android:calendarTextColor="@color/nice"
        android:dayOfWeekTextAppearance="@color/nice"
        android:yearListSelectorColor="@color/nice3"
        android:minDate=""
        android:background="@color/nice"/>

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        android:layout_gravity="center"
        android:id="@+id/timepicker"/>



    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hozzaad"
        android:layout_marginStart="30dp"
        android:background="@color/nice2"
        android:textColor="@color/nice"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="16dp"
            android:id="@+id/btnfab"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/yellow_star"
            app:layout_anchor="@id/btnSave"
            android:backgroundTint="@color/nice"
             />
    </LinearLayout>

</ScrollView>