<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/LoginScreenImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/sun"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:text="@string/jelentkezz_be"
        android:textSize="30sp"
        android:textColor="@color/nice"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="@string/email"
        android:textSize="20sp"
        android:textColor="@color/nice"/>

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="@string/jelszo"
        android:textColor="@color/nice"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:inputType="numberPassword"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/belepes"
        android:background="@color/nice2"
        android:textColor="@color/nice"/>

</LinearLayout>